Hypernumbers game modifications.

--- a/examples/games/hyper-number/hyper-number.html
+++ b/examples/games/hyper-number/hyper-number.html
@@ -34,6 +34,7 @@
 
     <script type="text/javascript" src="game/namespace.js"></script>
     <script type="text/javascript" src="game/context.js"></script>
+    <script type="text/javascript" src="actor/garden.js"></script>
     <script type="text/javascript" src="actor/gamescene.js"></script>
 
 
