Hypernumbers game modifications. Removed bug regarding out of time actors being taken into account for oclusion.

--- a/examples/games/hyper-number/hyper-number.html
+++ b/examples/games/hyper-number/hyper-number.html
@@ -52,10 +52,11 @@
 
             new CAAT.ImagePreloader().loadImages(
                 [
-                    {id:'bricks',   url:'res/img/nums.png'},
-                    {id:'buttons',  url:'res/img/buttons.png'},
-                    {id:'madewith', url:'res/img/madewith.png'},
-                    {id:'space',    url:'res/img/space2.jpg'}
+                    {id:'bricks',       url:'res/img/nums.png'},
+                    {id:'buttons',      url:'res/img/buttons.png'},
+                    {id:'madewith',     url:'res/img/madewith.png'},
+                    {id:'space',        url:'res/img/space2.jpg'},
+                    {id:'background',   url:'res/img/fondo.jpg'}
                 ],
 
                 function( counter, images ) {
