--- a/examples/games/hyper-number/hyper-number.html
+++ b/examples/games/hyper-number/hyper-number.html
@@ -56,7 +56,8 @@
                     {id:'buttons',      url:'res/img/buttons.png'},
                     {id:'madewith',     url:'res/img/madewith.png'},
                     {id:'space',        url:'res/img/space2.jpg'},
-                    {id:'background',   url:'res/img/fondo.jpg'}
+                    {id:'background',   url:'res/img/fondo.jpg'},
+                    {id:'background_op',    url:'res/img/fondo_opciones.jpg'}
                 ],
 
                 function( counter, images ) {
