Hypernumbers game modifications. Added Scene chronometer management.

--- a/examples/games/hyper-number/hyper-number.html
+++ b/examples/games/hyper-number/hyper-number.html
@@ -52,12 +52,20 @@
 
             new CAAT.ImagePreloader().loadImages(
                 [
-                    {id:'bricks',       url:'res/img/nums.png'},
-                    {id:'buttons',      url:'res/img/buttons.png'},
-                    {id:'madewith',     url:'res/img/madewith.png'},
-                    {id:'space',        url:'res/img/space2.jpg'},
-                    {id:'background',   url:'res/img/fondo.jpg'},
-                    {id:'background_op',    url:'res/img/fondo_opciones.jpg'}
+                    {id:'bricks',           url:'res/img/nums.png'},
+                    {id:'buttons',          url:'res/img/buttons.png'},
+                    {id:'madewith',         url:'res/img/madewith.png'},
+                    {id:'space',            url:'res/img/space2.jpg'},
+                    {id:'background',       url:'res/img/fondo.jpg'},
+                    {id:'background_op',    url:'res/img/fondo_opciones.jpg'},
+                    {id:'cloud1',           url:'res/img/nube1.png'},
+                    {id:'cloud2',           url:'res/img/nube2.png'},
+                    {id:'cloud3',           url:'res/img/nube3.png'},
+                    {id:'cloud4',           url:'res/img/nube4.png'},
+                    {id:'cloudb1',          url:'res/img/nubefondo1.png'},
+                    {id:'cloudb2',          url:'res/img/nubefondo2.png'},
+                    {id:'cloudb3',          url:'res/img/nubefondo3.png'},
+                    {id:'cloudb4',          url:'res/img/nubefondo4.png'}
                 ],
 
                 function( counter, images ) {
