Removed some bugs closure compiler in verbose mode complaint about. Fixed browserDetect class and added to CAAT namespace. Removed uneeded input functions references. Added new tech demo scene. Minor changes to current tech demo scenes.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -40,5 +40,6 @@
 <script type="text/javascript" src="scene5.js"></script>
 <script type="text/javascript" src="scene6.js"></script>
 <script type="text/javascript" src="scene7.js"></script>
+<script type="text/javascript" src="scene8.js"></script>
 
 <script type="text/javascript" src="main.js"></script>
