--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="../../src/core/browserdetect.js"></script>
 
 <script type="text/javascript" src="../../src/model/actor.js"></script>
+<script type="text/javascript" src="../../src/model/extraActor.js"></script>
 <script type="text/javascript" src="../../src/model/conpoundimage.js"></script>
 <script type="text/javascript" src="../../src/model/imagepreloader.js"></script>
 <script type="text/javascript" src="../../src/model/director.js"></script>
@@ -25,6 +26,7 @@
 <script type="text/javascript" src="../../src/math/point.js"></script>
 <script type="text/javascript" src="../../src/math/rectangle.js"></script>
 <script type="text/javascript" src="../../src/math/bezier.js"></script>
+<script type="text/javascript" src="../../src/math/color.js"></script>
 
 <script type="text/javascript" src="../../src/path/path.js"></script>
 <script type="text/javascript" src="../../src/path/pathactor.js"></script>
